new versions
- new gradle version
- edited application.yml
- edited Banner